styles.css
/* ... */
.openstudio-work-progress {
    width: 85%;
    height: 16px;
    border-radius: 5px;
    border: 1px solid #d4d2d2;
    position: absolute;
    top: 2px;
    left: 2px;
}

.openstudio-work-progress-item {
    width: 64px;
    float: left;
}

.openstudio-work-progress div:nth-child(n+2) {
    border-left: 1px solid #f0f0f1;
    height: 18px;
}

.openstudio-work-progress-percent {
    float: right;
    width: 15%;
    text-align: right;
}

.openstudio-completecolour {
    stop-color: #0f8372;
}

/**
* End progress bar
*/

.openstudio-profile-bar {
    padding-left: 15px;
    padding-bottom: 5px;
    font-size: 1em;
}

.openstudio-profile-rule {
    border: 1px solid #d4d2d2;
    margin-top: 5px;
    margin-bottom: 10px;
    margin-left: 15px;
}

.openstudio-profile-bar .openstudio-profile-user-picture  img{
    float: left;
    display: inline-block;
    height: 50px;
    width: 48px;
    height: 48px;
    padding-top: 10px;
}

.openstudio-profile-bar .openstudio-profile-head {
    display: inline-block;
    float: left;
    padding-top: 5px;
    width: 25%;
}

.openstudio-profile-head .openstudio-profile-date {
    float: left;
    padding-left: 7px;
    display: inline-block;
}

.openstudio-profile-date .openstudio-profile-last-active-date {
    color: #002158;
}

.openstudio-profile-date .openstudio-profile-active-date {
    color: #000000;
}

.openstudio-profile-bar .openstudio-profile-comment-view {
    float: left;
    color: #000000;
    display: inline-block;
    padding-left: 5px;
}

.openstudio-profile-comment-view .openstudio-profile-comment img {
    float: left;
    display: inline-block;
    padding-top: 2px;
}

.openstudio-profile-comment .openstudio-profile-comment-text {
    display: inline-block;
    margin-left: 7px;
}

.openstudio-profile-comment-view .openstudio-own-view img{
    float: left;
    display: inline-block;
    padding-top: 2px;
}

.openstudio-own-view .openstudio-profile-view-text {
    display: inline-block;
    margin-left: 7px;
}

.openstudio-profile-progress-content-description .openstudio-profile-block {
    display: inline-block;
}

.openstudio-profile-progress-content-description .openstudio-profile-progress {
    padding-left: 2px;
}

.openstudio-profile-progress-content-description .openstudio-profile-progress-step {
    display: inline-block;
    border: 1px solid #bfe2ef;
    width: 12px;
    height: 12px;
}

.openstudio-profile-progress-content-description .content-block-active {
    background-color: #378726;
    border: 1px solid #378726;
}

.openstudio-profile-progress-content-description .content-block-inactive {
    background-color: #ea0000;
    border: 1px solid #ea0000;
}

#openstudio_profile_bar {
    display: block;
}

#openstudio_profile_active_date,
#openstudio_profile_fullusername_mobile {
    display: none;
}

#openstudio_profile_bar_mobile {
    display: none;
    float: left;
    width: 100%;
    line-height: 22px;
}

#openstudio_profile_fullusername {
    display: inline-block;
}

.openstudio-profile-bar .openstudio-profile-mypaticipation-content {
    width: 100%;
    display: inline-block;
}

.openstudio-profile-bar .openstudio-profile-mypaticipation-content a {
    cursor: pointer;
    text-decoration: none;
}

.openstudio-profile-bar .openstudio-profile-mypaticipation {
    color: #002158;
    font-family: Arial;
    font-weight: bold;
    padding-left: 7px;
    padding-right: 25px;
    background-color: transparent;
}

.openstudio-profile-mypaticipation .openstudio-expand-image,
.openstudio-profile-mypaticipation .openstudio-collapse-image {
    float: right;
    text-align: right;
}

.openstudio-profile-mypaticipation#openstudio_profile_fullusername_mobile .openstudio-expand-image,
.openstudio-profile-mypaticipation#openstudio_profile_fullusername_mobile .openstudio-collapse-image {
    margin-right: 15px;
}

.openstudio-profile-mypaticipation#openstudio_profile_fullusername_mobile .openstudio-expand-image img,
.openstudio-profile-mypaticipation#openstudio_profile_fullusername_mobile .openstudio-collapse-image img {
    width: 20px;
}

.openstudio-profile-bar .openstudio-profile-paticipation-content {
    width: 25%;
    display: inline-block;
    margin-top: 3px;
    vertical-align: top;
}

.openstudio-profile-paticipation-content .openstudio-profile-paticipation {
    color: #002158;
    font-family: Arial;
    border: none;
    padding-left: 5px;
    padding-right: 20px;
    background-color: transparent;
    width: 110px;
}

.openstudio-profile-paticipation-content .openstudio-profile-paticipation img {
    width: 16px;
    height: 16px;
    display: inline-block;
    margin-left: 4px;
}

.openstudio-profile-bar .openstudio-profile-progress-content {
    display: inline-block;
    vertical-align: top;
    margin-top: 3px;
    padding-left: 7px;
}

.openstudio-profile-progress-content .openstudio-profile-progress-content-description {
    float: left;
    display: inline-block;
    clear: left;
}

.openstudio-profile-bar .openstudio-profile-progress-title {
    display: inline-block;
    color: #002158;
    font-family: Arial;
    vertical-align: middle;
    float: left;
}

.openstudio-profile-bar .openstudio-profile-progress-bar {
    display: inline-block;
    padding-left: 2px;
    width: 270px;
    height: 18px;
    float: left;
}

.openstudio-profile-bar .openstudio-profile-progress-working-title {
    display: inline-block;
    margin-left: 5px;
    font-size: 1em;
}

.openstudio-paging {
    text-align: center;
    font-size: 1.14285em;
    font-family: Arial;
    padding-bottom: 52px;
}

/* Handle folder overview */
.openstudio-folder-header {
    margin: 20px;
    padding: 12px 0 2px 0;
}

.openstudio-folder-header .openstudio-folder-header-left {
    width: 70%;
    display: inline-block;
}

.openstudio-folder-header .openstudio-folder-header-right {
    float: right;
    margin-top: 5px;
}
.openstudio-folder-header-left img {
    position: absolute;
}
/* ... */

